vendor/tt-call/tests/ui/type-pointer-eof.stderr
error: no rules expected the token `const`
 --> tests/ui/type-pointer-eof.rs:5:17
  |
5 |     input = [{ *const }]
  |                 ^^^^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
